--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/3_slider.html
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/3_slider.html
@@ -6,7 +6,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/playoutprod/2020-3wa-react01/f94a6277928b559c4a90b6ff55ebc3045458c83a/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="https://raw.githack.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
   </head>
   <body>
     <div id="slider" class="etape2"></div>
