--- a/03_GESTION_DES_STYLES/composition.html
+++ b/03_GESTION_DES_STYLES/composition.html
@@ -73,7 +73,7 @@
         }
 
         this.setState({
-          users : [...users,{
+          users : [...this.state.users,{
             id : this.state.users.length+1,
             name : this.state.user
           }]
