--- a/03_GESTION_DES_STYLES/composition.html
+++ b/03_GESTION_DES_STYLES/composition.html
@@ -15,11 +15,11 @@
 
     // Base de données
     const users = [
-        { id : 1, name : "Alice" },
+        { id : 1, name : "Alice"},
         { id : 2, name : "Alan" },
-        { id : 3, name : "Phil" },
+        { id : 3, name : "Phil"},
         { id : 4, name : "Naoudi" },
-        { id : 5, name : "Fenley" }
+        { id : 5, name : "Fenley" },
     ];
 
 
@@ -61,7 +61,6 @@
       }
 
       handleClick = (e)=>{
-
         const search = this.state.users.filter( user => user.name.toUpperCase() === this.state.user.toUpperCase());
 
         if(search.length > 0 ){
@@ -78,12 +77,18 @@
             name : this.state.user
           }]
         })
+      }
 
+      handleClick = (e)=>{
+        this.setState({
+          users : this.state.users.sort(() => Math.random ( ) - 0.5 );
+        });
       }
 
       render(){
         return(
           <Dashboard>
+
             <input onChange={this.handleChange}/>
             <button onClick={this.handleClick}>Add user</button>
             {
