--- a/07_CONCEPTS_AVANCES/corrections/3_usecallback_test.html
+++ b/07_CONCEPTS_AVANCES/corrections/3_usecallback_test.html
@@ -31,7 +31,7 @@
         triggerFunc.add(incrementCount)
         triggerFunc2.add(incrementPos)
 
-        console.log(incrementCount.size,triggerFunc2.size);
+        console.log(triggerFunc.size,triggerFunc2.size);
 
 
       return (
