--- a/07_CONCEPTS_AVANCES/corrections/32_useCallback.html
+++ b/07_CONCEPTS_AVANCES/corrections/32_useCallback.html
@@ -15,11 +15,13 @@
 
       const randomColour = () => '#'+(Math.random()*0xFFFFFF<<0).toString(16);
 
-      const Button = React.memo((props)=>{
-        return(
-          <button style={{backgroundColor:randomColour()}} onClick={props.handleClick}>CLIQUE MOI</button>
-        )
-      })
+      const Button = React.memo(
+        (props)=>{
+          return(
+            <button style={{backgroundColor:randomColour()}} onClick={props.handleClick}>CLIQUE MOI</button>
+          )
+        }
+      )
 
       function App(){
 
@@ -28,15 +30,16 @@
         }
         const [title,setTitle] = React.useState(getAge())
 
-        /*
+
         const handleClick = React.useCallback((e)=>{
           setTitle(getAge())
         },[])
-        */
 
+
+        /*
         const handleClick = (e)=>{
           setTitle(getAge())
-        }
+        }*/
 
 
         return(
